fixing mobile text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,8 @@
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.4);
   /*margin: 25%;*/
-  min-height: 300px;
-  max-height: 300px;
+  min-height: 350px;
+  max-height: 350px;
   padding: 5%;
   flex-direction: column;
   background-size: cover;
